# rstocks

./: Cargo.toml  cmd.txt
src/: cli.rs  ctx.rs  data.rs  finance.rs  main.rs  table.rs
