[package]
name = "rstocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.33", features = ["serde"] }
derive_more = "0.99.17"
directories = "5.0.1"
owo-colors = "4.0.0"
prettytable-rs = "0.10.0"
rustyline = { version = "13.0.0", features = ["derive"] }
serde = "1.0.195"
tabled = { version = "0.15.0", features = ["ansi"] }
time = "0.3.31"
tokio-test = "0.4.3"
toml = "0.8.8"
yahoo_finance_api = "2.1.0"
